# AI_Log_analyser

./: .dockerignore  .env  .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-gcp.yml  deploy.yml
agents/: __init__.py  base.py  comparative_analyst.py  crash_investigator.py  ekf_diagnostics.py  esc_motor.py  flight_dynamics.py  gps_integrity.py  mission_behavior.py  parameter_drift.py  power_system.py  report_writer.py  safety_compliance.py  timeline_agent.py  vibration_analysis.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_phase6_gcs_columns.py
api/: main.py
api/middleware/: __init__.py  auth.py  upload_validation.py
api/workers/: __init__.py  celery_app.py  tasks.py
config/: routing.py  settings.py
config/vehicle_profiles/: ardupilot_fixedwing.json  ardupilot_quad.json
deploy/: bootstrap.sh  go_no_go_checklist.md  runbook.md
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.prod.yml  nginx-frontend.conf
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.tsx
infra/terraform/: alb.tf  cloudfront.tf  cloudwatch.tf  cost_controls.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  (+19 more)
intelligence/: __init__.py  domain_validator.py  narrative_validator.py
llm/: __init__.py  client.py  inference_client.py  structured.py
orchestrator/: __init__.py  graph.py  state.py
parsers/: __init__.py  ardupilot_bin.py  base.py  csv_json.py  mavlink_tlog.py  px4_ulog.py  schema.py
pipeline/: __init__.py  anomaly_detector.py  event_extractor.py  ingestion.py  phase_detector.py
scripts/: init_db.py  run_benchmark.py  setup_ollama.sh  soak_review.sh
storage/: __init__.py  metadata_db.py  parquet_store.py  vector_db.py
(+74 files in other folders)
