[project]
name = "forensic-flight-ai"
version = "0.1.0"
description = "Local autonomous UAV flight log forensic analyst"
requires-python = ">=3.10"

dependencies = [
    # Parsing
    "pymavlink>=2.4.41",
    "pyulog>=0.9.0",
    # Data
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    # ML / Signal
    "scikit-learn>=1.3.0",
    "ruptures>=1.1.9",
    # LLM
    "openai>=1.10.0",
    "instructor>=0.5.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.40",
    # Storage
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.2",
    "python-multipart>=0.0.7",
    "celery[redis]>=5.3.0",
    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Plotting (server-side)
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    # Reports
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
    # Utils
    "python-dateutil>=2.8.2",
    "rich>=13.7.0",
    "structlog>=24.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "hypothesis>=6.92.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config", "intelligence", "llm", "orchestrator", "parsers", "pipeline", "storage"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
